--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="hexC.css">
 </head>
 <body>
-<a class="author" href="https://github.com/hitop/hexc" target="_blank">Github</a>
+<a class="author" href="https://github.com/hitop/hexC" target="_blank">Github</a>
 
 <div id="ctip"></div>
 <div id="cIn">
