perf: hexc apply button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <div id="ctip"></div>
 <div id="cIn">
-  <input id="cInv" type="text" name="hexc" placeholder="#82b64a" value="r6" onkeydown="hexC(event)">
+  <input id="cInv" class="cIn_input" type="text" name="hexc" placeholder="#82b64a" value="r6" onkeydown="hexC(event)">
+  <div class="cIn_apply" onclick="hexApply()">></div>
 </div>
 <div class="cShow" onclick="copyHexc(0)">
   <input type="text" class="chex">
